--- a/o autoru.html
+++ b/o autoru.html
@@ -22,7 +22,7 @@
                 <li><a href="cenovnik.html">Cenovnik</a></li>
                 <li><a href="galerija.html">Galerija</a></li>
                 <li><a href="kontakt.html"> Kontakt</a></li>
-                <li><a href="o autoru.html">O autoru</a></li>
+                <li><a class="active" href="o autoru.html">O autoru</a></li>
             </ul>
             <div class="cleaner"></div>
           </div>  
