--- a/cenovnik.html
+++ b/cenovnik.html
@@ -20,7 +20,7 @@
           <nav>
             <ul>
                 <li><a href="index.html">Pocetna</a></li>
-                <li><a href="cenovnik.html">Cenovnik</a></li>
+                <li><a class="active" href="cenovnik.html">Cenovnik</a></li>
                 <li><a href="galerija.html">Galerija</a></li>
                 <li><a href="kontakt.html"> Kontakt</a></li>
                 <li><a href="o autoru.html">O autoru</a></li>
