--- a/kontakt.html
+++ b/kontakt.html
@@ -21,7 +21,7 @@
                 <li><a href="index.html">Pocetna</a></li>
                 <li><a href="cenovnik.html">Cenovnik</a></li>
                 <li><a href="galerija.html">Galerija</a></li>
-                <li><a href="kontakt.html"> Kontakt</a></li>
+                <li><a class="active" href="kontakt.html"> Kontakt</a></li>
                 <li><a href="o autoru.html">O autoru</a></li>
             </ul>
             <div class="cleaner"></div>
