--- a/o autoru.html
+++ b/o autoru.html
@@ -49,7 +49,8 @@
                     <a href="https://www.facebook.com" class="fa fa-facebook"></a>
                     <a href="https://www.twitter.com" class="fa fa-twitter"></a>
                     <a href="https://www.instagram.com" class="fa fa-instagram"></a>
-                    <a href="https://www.instagram.com" class="fa fa-rss"></a>         
+                    <a href="root/rss.xml" class="fa fa-rss"></a> 
+                    <a href="root/sitemap.xml" class="fa fa-sitemap"></a>              
                  </div>
                <div id="copyrite">
                    <p>&#169 Lazar Milošević 139/21</p>
