--- a/galerija.html
+++ b/galerija.html
@@ -31,7 +31,7 @@
        </div>
       </header>  
         <div id="pozadinaizagal">
-            <div id="tekstgalerija">
+            <div id="tekstpreko1">
               <h1>GALERIJA</h1>
             </div>
           </div>
