--- a/index.html
+++ b/index.html
@@ -36,13 +36,9 @@
         <!--TELO-->
 
         <div class="pozadinateg">
-            <div id="blokzatekstpreko">
-                <div id="tekstpreko">
-                    <h1>NAČINI SVOJ PRVI KORAK KA USPEHU</h1>
-                    <h2>POSETI NAS</h2>
-                </div>
-            </div>    
-        
+            <div id="tekstpreko1"> 
+                <h1>NAČINI SVOJ PRVI KORAK KA USPEHU POSETI NAS!</h1>
+            </div>
           <div id="strana1">
             <div id="teretanainfo">
                 <div class="cenerblock">
@@ -90,8 +86,7 @@
                 </div>  
             </div>
             </div> 
-            <div id="odbijac"></div>
-        </div>
+            </div>
     
 
         <!--FOOTER-->
