--- a/o autoru.html
+++ b/o autoru.html
@@ -29,6 +29,9 @@
         </nav>
       </header>
         <div id="bojapozadine">
+          <div id="tekstpreko1">
+            <h1>O AUTORU</h1>
+          </div>
         <div class="centerblock">
           <div id="oautoru">
               <div id="slikamene"></div>
