--- a/cenovnik.html
+++ b/cenovnik.html
@@ -31,8 +31,7 @@
        </div>
       </header>  
             <!--TABELE-->
-            <div id="blokzatekstprekokontakt">
-                <div id="tekstprekokontakt">
+                <div id="tekstpreko1">
                     <h1>CENOVNIK</h1>
                 </div>
             </div>  
