--- a/kontakt.html
+++ b/kontakt.html
@@ -30,8 +30,7 @@
       </header>  
         <div id="pozadinakontakt">
           <div class="centerblok">
-            <div id="blokzatekstprekokontakt">
-              <div id="tekstprekokontakt">
+              <div id="tekstpreko1">
                   <h1>KONTAKT</h1>
               </div>
           </div>  
