--- a/galerija.html
+++ b/galerija.html
@@ -36,20 +36,22 @@
             </div>
           </div>
           <div id="bojapozadine">
-            <div class="centerblock">
-              <div class="blokovizaslike">
-                <div class="slikab"><img id="r" src="1.jpg" alt="slika"></div>
-                <div class="slikab"><img id="r" src="2.jpg" alt="slika"></div>
+              <div class="centerblock">
+               <div id="galerija">
+                <div class="blokovizaslike">
+                    <div class="slikab"><img id="r" src="1.jpg" alt="slika"></div>
+                    <div class="slikab"><img id="r" src="2.jpg" alt="slika"></div>
+                </div>
+                <div class="blokovizaslike">
+                    <div class="slikab"><img id="r" src="3.jpg" alt="slika"></div>
+                    <div class="slikab"><img id="r" src="5.jpg" alt="slika"></div>
+                </div>
+                <div class="blokovizaslike">
+                    <div class="slikab"><img id="r" src="6.jpg" alt="slika"></div>
+                    <div class="slikab"><img id="r" src="7.jpg" alt="slika"></div>
+                </div>
               </div>
-              <div class="blokovizaslike">
-                <div class="slikab"><img id="r" src="3.jpg" alt="slika"></div>
-                <div class="slikab"><img id="r" src="5.jpg" alt="slika"></div>
-              </div>
-              <div class="blokovizaslike">
-                <div class="slikab"><img id="r" src="6.jpg" alt="slika"></div>
-                <div class="slikab"><img id="r" src="7.jpg" alt="slika"></div>
-              </div>
-          </div>
+             </div>
         </div>
       <footer>
             <div class="centerblock">
