--- a/kontakt.html
+++ b/kontakt.html
@@ -34,10 +34,8 @@
                   <h1>KONTAKT</h1>
               </div>
           </div>  
-            <div id="kontaktpadding">
               <div id="kontakt">
-                <div id="blokzablok3">
-                  <div id="blok3"><div class="mapouter"><div class="gmap_canvas"><iframe width="500" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=zravka%20celara%2016&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org"></a><br><style>.mapouter{position:relative;text-align:right;height:250px;width:500px;}</style><a href="https://www.embedgooglemap.net">embed a google map in html</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:250px;width:500px;}</style></div></div></div>
+                  <div id="blok3"><div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123movies</a><br><style>.mapouter{position:relative;text-align:right;height:250px;width:400px;}</style><a href="https://www.embedgooglemap.net">location map for website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:250px;width:400px;}</style></div></div></div>
                   <div id="blok3">
                     <h2>Radno vreme:</h2>
                     <p>Radnim danima i subotom 10:00-22:00</p>
@@ -47,7 +45,6 @@
                     <p>lazar.milosevic.139.21@ict.edu.rs</p>
                   </div>
                   <div class="cleaner"></div>
-                </div>
                 <div id="forma">
                     <form>
                     <label>Ime:</label></br>
