--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         <hr>
         <h1 id="naslovcitat">SAVETI</h1>
-            <div id="citat">
+            <div id="tri">
                 <div class="centerblock">
             <div class="blok2"><i class="fas fa-dumbbell"></i><p>Bilo da radite sa personalnim trenerom ili radite sami,
                                                                 od ključne važnosti je pravilno izvođenje vežbi. Kako biste bili
@@ -71,7 +71,10 @@
                                                                 ujedno dobre i za celokupno zdravlje organizma.</p></div>
             <div class="blok2"><i class="fas fa-spa"></i><p>Termin spa predstavlja skraćenicu od „sanus per aquam“ što u slobodnom prevodu znači „vodom do zdravlja“.
                                                             Spa, kao svojevrsna oaza opuštanja, pruža svojim posetiocima čitav niz usluga.Koji ćete od tretmana izabrati zavisi od vaših preferencija i mogućnosti.</p></div>
-            <div id="tekstcitata">
+            </div>
+            </div>
+                <div id="citat">
+                    <div id="tekstcitata">
                 <h2 class="naslovc">Zbog čega je značajna teretana?</h2>
                     <p id="oteretani">Pre svega zdravstveni značaj, iako to nažalost nije primarni
                         razlog kod većine ljudi koji kreću da se bave nekim vidom fizičke aktivnosti.
@@ -84,10 +87,9 @@
             </div>
             <div class="cleaner"></div>
                 </div>  
-            </div>
-            </div> 
-            </div>
-    
+
+            
+    </div>
 
         <!--FOOTER-->
 
