--- a/galerija.html
+++ b/galerija.html
@@ -50,6 +50,7 @@
                     <div class="slikab"><img id="r" src="6.jpg" alt="slika"></div>
                     <div class="slikab"><img id="r" src="7.jpg" alt="slika"></div>
                 </div>
+                <div class="cleaner"></div>
               </div>
              </div>
         </div>
