--- a/o autoru.html
+++ b/o autoru.html
@@ -43,6 +43,7 @@
                     Živim u Mladenovcu i tu sam završio srednju Tehničku školu, smer Elektrotehničar multimedija.
                     U slobodno vreme volim da treniram i provodim vreme sa društvom.</p>
                 </div>
+                <div class="cleaner"></div>
             </div>
           </div>
         </div>  
