--- a/kontakt.html
+++ b/kontakt.html
@@ -35,8 +35,9 @@
               </div>
           </div>  
               <div id="kontakt">
-                  <div id="blok3"><div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123movies</a><br><style>.mapouter{position:relative;text-align:right;height:250px;width:400px;}</style><a href="https://www.embedgooglemap.net">location map for website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:250px;width:400px;}</style></div></div></div>
-                  <div id="blok3">
+                <div id="blokovi3">
+                  <div class="blok3"><div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=zdravka%20celara%2016&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123movies</a><br><style>.mapouter{position:relative;text-align:right;height:250px;width:400px;}</style><a href="https://www.embedgooglemap.net">location map for website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:250px;width:400px;}</style></div></div></div>
+                  <div class="blok3">
                     <h2>Radno vreme:</h2>
                     <p>Radnim danima i subotom 10:00-22:00</p>
                     <h2>Lokacija:</h2>
@@ -45,6 +46,7 @@
                     <p>lazar.milosevic.139.21@ict.edu.rs</p>
                   </div>
                   <div class="cleaner"></div>
+                  </div>
                 <div id="forma">
                     <form>
                     <label>Ime:</label></br>
@@ -64,11 +66,10 @@
                     <input type="reset" value="Reset" id="reset" name="reset">
                     </form>
                   </div>
+                  <div class="cleaner"></div>
                 </div>
               </div>
-            </div>
-            <div class="cleaner"></div>
-          </div>
+            
         <footer>
             <div class="centerblock">
               <div id="drustvenemreze">
