--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
 
-          <!--HEADER-->
+          <!--HEADER-->                                             <!--SAJT JE RADJEN NA MONITORU OD 24INCH-->
 
       <header>
             <div class="centerblock">
