--- a/galerija.html
+++ b/galerija.html
@@ -19,7 +19,7 @@
             </div> 
           <nav>
             <ul>
-                <li><a href="index.html">Pocetna</a></li>
+                <li><a href="index.html">Početna</a></li>
                 <li><a href="cenovnik.html">Cenovnik</a></li>
                 <li><a class="active" href="galerija.html">Galerija</a></li>
                 <li><a href="kontakt.html"> Kontakt</a></li>
