--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div> 
           <nav>
             <ul>
-                <li><a class="active" href="#">Pocetna</a></li>
+                <li><a class="active" href="#">Početna</a></li>
                 <li><a href="cenovnik.html">Cenovnik</a></li>
                 <li><a href="galerija.html">Galerija</a></li>
                 <li><a href="kontakt.html"> Kontakt</a></li>
