--- a/cenovnik.html
+++ b/cenovnik.html
@@ -76,7 +76,7 @@
                             <tbody>
                                 <tr><td>Miloš-5 treninga nedeljno + plan ishrane + online konsultacije</td><td id="pod">150&euro;</td></tr>
                                 <tr><td>Veljko-3 treninga + online konsultacije</td><td id="pod">80&euro;</td></tr>
-                                <tr><td>Marija-grupni fitness treninzi za zene</td><td id="pod">4000RSD</td></tr>
+                                <tr><td>Marija-grupni fitness treninzi za žene</td><td id="pod">4000RSD</td></tr>
                             </tbody>
                         </table>
 
