--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <a href="root/sitemap.xml" class="fa fa-sitemap"></a>          
                  </div>
                <div id="copyrite">
-                   <p>&#169 Lazar Milošević 139/21</p>
+                <p><a href="o autoru.html"> &#169Lazar Milošević 139/21</a></p>
                </div>
                <div class="cleaner"></div>
             </div>
