--- a/kontakt.html
+++ b/kontakt.html
@@ -48,7 +48,7 @@
                   <div class="cleaner"></div>
                 </div>
                 <div id="forma">
-                    <form>
+                    <form action="tu.php">
                     <label>Ime:</label></br>
                       <input type="text" id="ime" name="ime" placeholder="Ime.."></br>
                     <label>Prezime:</label></br>
