--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8" />
+        <meta name="author" content="Lazar Milosevic"/>
+        <meta name="language" content="serbian"/>
+        <meta name="copyright" content="MLD's Gym - pocetna"/>
+        <meta name="description" content="opis teretane"/>
+        <meta name="keywords" content="Gym, trening"/>
         <title>MLD's Gym</title>
         <script src="https://kit.fontawesome.com/77d368e34d.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -8,7 +14,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <meta charset="UTF-8" />
         <link rel="shortcut icon" href="icon1.png" />
     </head>
     <body>
