--- a/cenovnik.html
+++ b/cenovnik.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8" />
+        <meta name="author" content="Lazar Milosevic"/>
+        <meta name="language" content="serbian"/>
+        <meta name="copyright" content="MLD's Gym - cenovnik"/>
+        <meta name="description" content="cene"/>
+        <meta name="keywords" content="Gym, trening"/>
         <title>MLD's Gym - Cenovnik</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <meta charset="UTF-8" />
         <link rel="shortcut icon" href="icon1.png" />
     </head>
     <body id="pozadinacen">
