--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
     <head>
         <title>Portfolio</title>
+        <!--meta-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Lazar Milosevic"/>
+        <meta name="language" content="serbian"/>
+        <meta name="copyright" content="Portfolio"/>
+        <meta name="description" content="Lazar Milosevic Portfolio"/>
+        <meta name="keywords" content="web design, videoedit, photoedit"/>
+        <!--linkovi-->
         <link rel="icon" type="image/x-icon" href="favicon.png">
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link rel="stylesheet" type="text/css" href="responsive.css" />
@@ -79,15 +86,13 @@
             <div id="zapr">       
                 <div id="blokpr">
                     <a href="#"><img src="prj.png" alt="proj"></a>
-                    <div class="tooltip">More info
-                    <span class="tooltiptext">My protfolio (HTML, CSS, SASS)</span>
-                    </div>
+                    <h3>My protfolio</h3>
+                    <h4>(HTML, CSS, SASS)</h4>
                 </div>
                 <div id="blokpr2">
                     <a href="https://lazar146.github.io/MldGym/index.html"><img src="prj2.png" alt="proj2"></a>
-                    <div class="tooltip">More info
-                    <span class="tooltiptext">My first project (HTML, CSS)</span>
-                    </div>
+                    <h3>My first project</h3>
+                    <h4>(HTML, CSS)</h4>
                 </div>
             </div>
        </div>
@@ -149,7 +154,7 @@
         </div>
         <footer>
             <div class="centerblock">
-                <h4>Copyright © 2022 All rights reserved&nbsp;|&nbsp;<span id="bold">Lazar Milošević</span></h4>
+                <h4>Copyright &copy; 2022 All rights reserved&nbsp;|&nbsp;<span id="bold">Lazar Milošević</span></h4>
             <div id="mreze">
                 <a href="www.facebook.com"><i class="fa fa-facebook"></i></a>
                 <a href="www.instagram.com"><i class="fa fa-instagram"></i></a>
@@ -159,6 +164,7 @@
                 <a href="style.css">CSS</a>
                 <a href="style.scss">SASS</a>
                 <a href="responsive.css">RENSPONSIVE</a>
+                <a href="robots/sitemap.xml">SITEMAP</a>
             </div>
             </div>
         </footer>
